# spotify-audit-rs

./: .gitignore  GEMINI.md  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: audit.rs  auth.rs  lib.rs  models.rs
