[package]
name = "audit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rspotify = { version = "0.13", features = ["cli", "env-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
log = "0.4.29"
